# binary-matching-engine

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
cursor/: AI_sessions.md  cursor_chat.md
include/: MemoryPool.h  OrderBook.h  Types.h
scripts/: start.sh
src/: OrderBook.cpp  main.cpp  server.ts
